--- a/newZooApp/Web.config
+++ b/newZooApp/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="ZooApp" connectionString="Data Source=(local)\sqlexpress;Initial Catalog=ZooApp;Integrated Security=SSPI;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
